--- a/apps/root/styles/global/layout.scss
+++ b/apps/root/styles/global/layout.scss
@@ -65,6 +65,7 @@
   max-width: var(--max-content-width);
 
   @media (--large) {
+    margin-bottom: var(--spacing-lg);
     margin-left: 0;
     padding-inline: 0;
   }
